--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -60,24 +60,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Debug\ObjectDumper.cs" />
-    <Compile Include="Definitions\Flags\DirCodes.cs" />
-    <Compile Include="Definitions\Flags\SyntFlags.cs" />
-    <Compile Include="Definitions\Lexicon\GlossarySection.cs" />
-    <Compile Include="Definitions\Lexicon\VerbSyntax.cs" />
-    <Compile Include="Definitions\SentenceStructure\Adjective.cs" />
-    <Compile Include="Definitions\SentenceStructure\Command.cs" />
-    <Compile Include="Definitions\SentenceStructure\Direction.cs" />
-    <Compile Include="Definitions\SentenceStructure\Node.cs" />
-    <Compile Include="Definitions\SentenceStructure\Noun.cs" />
-    <Compile Include="Definitions\SentenceStructure\Particle.cs" />
-    <Compile Include="Definitions\SentenceStructure\NounCollection.cs" />
-    <Compile Include="Definitions\SentenceStructure\UnknownWord.cs" />
-    <Compile Include="Definitions\SentenceStructure\Verb.cs" />
-    <Compile Include="Definitions\World\Entity.cs" />
-    <Compile Include="Data\Glossary.cs" />
-    <Compile Include="Logic\ConsoleGUI.cs" />
-    <Compile Include="Logic\Sentence.cs" />
-    <Compile Include="Logic\Game.cs" />
+    <Compile Include="Controller\Node Data\DirCodes.cs" />
+    <Compile Include="Controller\Node Data\SyntFlags.cs" />
+    <Compile Include="Controller\GlossarySection.cs" />
+    <Compile Include="Controller\Node Data\VerbSyntax.cs" />
+    <Compile Include="Controller\Nodes\Adjective.cs" />
+    <Compile Include="Controller\Nodes\Command.cs" />
+    <Compile Include="Controller\Nodes\Direction.cs" />
+    <Compile Include="Controller\Node.cs" />
+    <Compile Include="Controller\Nodes\Noun.cs" />
+    <Compile Include="Controller\Nodes\Particle.cs" />
+    <Compile Include="Controller\Nodes\NounCollection.cs" />
+    <Compile Include="Controller\Nodes\UnknownWord.cs" />
+    <Compile Include="Controller\Nodes\Verb.cs" />
+    <Compile Include="Model\Entity.cs" />
+    <Compile Include="Controller\Glossary.cs" />
+    <Compile Include="View\ConsoleGUI.cs" />
+    <Compile Include="Controller\Sentence.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
