--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -61,10 +61,10 @@
   <ItemGroup>
     <Compile Include="Controller\Nodes\Conjunction.cs" />
     <Compile Include="Debug\ObjectDumper.cs" />
-    <Compile Include="Controller\Node Data\DirCodes.cs" />
-    <Compile Include="Controller\Node Data\SyntFlags.cs" />
-    <Compile Include="Controller\GlossaryExtensions.cs" />
-    <Compile Include="Controller\Node Data\VerbSyntax.cs" />
+    <Compile Include="Controller\Minor Objects\DirCodes.cs" />
+    <Compile Include="Controller\Minor Objects\SyntFlags.cs" />
+    <Compile Include="Controller\Minor Objects\GlossaryExtensions.cs" />
+    <Compile Include="Controller\Minor Objects\VerbSyntax.cs" />
     <Compile Include="Controller\Nodes\Adjective.cs" />
     <Compile Include="Controller\Nodes\Command.cs" />
     <Compile Include="Controller\Nodes\Direction.cs" />
