--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -60,10 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\Nodes\Conjunction.cs" />
-    <Compile Include="Debug\ObjectDumper.cs" />
+    <Compile Include="Adventure\Debug\ObjectDumper.cs" />
     <Compile Include="Controller\Minor Objects\DirCode.cs" />
     <Compile Include="Controller\Minor Objects\SyntFlag.cs" />
-    <Compile Include="Controller\Minor Objects\ClassExtensions.cs" />
+    <Compile Include="Adventure\ClassExtensions.cs" />
     <Compile Include="Controller\Minor Objects\VerbSyntax.cs" />
     <Compile Include="Controller\Nodes\Adjective.cs" />
     <Compile Include="Controller\Nodes\Command.cs" />
@@ -76,10 +76,9 @@
     <Compile Include="Controller\Nodes\Verb.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Controller\Glossary.cs" />
-    <Compile Include="RuntimeVals.cs" />
     <Compile Include="View\ConsoleGUI.cs" />
     <Compile Include="Controller\Sentence.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Adventure\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
