--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Model\CommandAction.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Controller\Glossary.cs" />
+    <Compile Include="Model\SentenceInterpreter.cs" />
     <Compile Include="Model\VerbAction.cs" />
     <Compile Include="View\ConsoleGUI.cs" />
     <Compile Include="Controller\Sentence.cs" />
