Restructured glossary; made validators non-static, added syntaxWildcard, modified constructor.

--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -61,7 +61,7 @@
   <ItemGroup>
     <Compile Include="Adventure\Debug\ObjectDumper.cs" />
     <Compile Include="Adventure\Exceptions\GlossaryValidationException.cs" />
-    <Compile Include="Adventure\Load\BaseGlossaryEntries.cs" />
+    <Compile Include="Adventure\Load\BuildGlossary.cs" />
     <Compile Include="Adventure\Game.cs" />
     <Compile Include="Controller\DirCode.cs" />
     <Compile Include="Controller\Glossary\Entries\VerbEntry.cs" />
