--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Adventure\Debug\ObjectDumper.cs" />
     <Compile Include="Adventure\Exceptions\GlossaryValidationException.cs" />
+    <Compile Include="Adventure\ClassExtensions.cs" />
     <Compile Include="Adventure\Load\BuildGlossary.cs" />
     <Compile Include="Adventure\Game.cs" />
     <Compile Include="Controller\DirCode.cs" />
