Renamed Entries to Definitions.

--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -65,14 +65,14 @@
     <Compile Include="Adventure\Load\BuildGlossary.cs" />
     <Compile Include="Adventure\Game.cs" />
     <Compile Include="Controller\DirCode.cs" />
-    <Compile Include="Controller\Glossary\Entries\VerbEntry.cs" />
-    <Compile Include="Controller\Glossary\Entries\ParticleEntry.cs" />
-    <Compile Include="Controller\Glossary\Entries\NounEntry.cs" />
-    <Compile Include="Controller\Glossary\Entries\DirectionEntry.cs" />
-    <Compile Include="Controller\Glossary\Entries\ConjunctionEntry.cs" />
-    <Compile Include="Controller\Glossary\Entries\CommandEntry.cs" />
-    <Compile Include="Controller\Glossary\Entries\AdjectiveEntry.cs" />
-    <Compile Include="Controller\Glossary\Entry.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\VerbDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\ParticleDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\NounDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\DirectionDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\ConjunctionDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\CommandDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\AdjectiveDef.cs" />
+    <Compile Include="Controller\Glossary\Definition.cs" />
     <Compile Include="Controller\SyntFlag.cs" />
     <Compile Include="Controller\VerbSyntax.cs" />
     <Compile Include="Controller\Sentence\Nodes\Adjective.cs" />
