Improved naming of Nodes.

--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -75,16 +75,16 @@
     <Compile Include="Controller\Glossary\Definition.cs" />
     <Compile Include="Controller\SyntFlag.cs" />
     <Compile Include="Controller\VerbSyntax.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Adjective.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Command.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Conjunction.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Direction.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\AdjectiveNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\CommandNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\ConjunctionNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\DirectionNode.cs" />
     <Compile Include="Controller\Sentence\Node.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Noun.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Particle.cs" />
-    <Compile Include="Controller\Sentence\Nodes\NounGroup.cs" />
-    <Compile Include="Controller\Sentence\Nodes\UnknownWord.cs" />
-    <Compile Include="Controller\Sentence\Nodes\Verb.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\NounNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\ParticleNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\NounGroupNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\UnknownNode.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\VerbNode.cs" />
     <Compile Include="Model\CommandAction.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Controller\Glossary\Glossary.cs" />
