--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B917E264-8018-4847-BBCE-07726571E39E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ADVENT</RootNamespace>
-    <AssemblyName>ADVENT</AssemblyName>
+    <RootNamespace>Adventure</RootNamespace>
+    <AssemblyName>Advent-Game</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,6 +65,7 @@
     <Compile Include="Adventure\Load\BuildGlossary.cs" />
     <Compile Include="Adventure\Game.cs" />
     <Compile Include="Controller\DirCode.cs" />
+    <Compile Include="Controller\Glossary\ConditionalDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\VerbDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\ParticleDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\NounDef.cs" />
