--- a/Advent-Test/Advent-Test.csproj
+++ b/Advent-Test/Advent-Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{BED0112E-2F7D-4D03-B182-33F8F1F178A4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Advent_Debug</RootNamespace>
-    <AssemblyName>Advent-Debug</AssemblyName>
+    <RootNamespace>Advent_Test</RootNamespace>
+    <AssemblyName>Advent-Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
