Renamed DirCode to DirFlag, Added UnknownDefID property to Glossary, added Glossary methods for retrieving data, Moved ConvertToNodes from Glossary to Sentence (and madde it actually work), added convenience functions to ConditionalDef. I probably should have committed this in parts.

--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -63,22 +63,22 @@
     <Compile Include="Adventure\ClassExtensions.cs" />
     <Compile Include="Adventure\Load\BuildGlossary.cs" />
     <Compile Include="Adventure\Game.cs" />
-    <Compile Include="Controller\DirCode.cs" />
+    <Compile Include="Controller\DirFlag.cs" />
     <Compile Include="Controller\Glossary\ConditionalDef.cs" />
+    <Compile Include="Controller\Glossary\Glossary Definitions\ConjunctionDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\VerbDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\ParticleDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\NounDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\DirectionDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\ConjunctionDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\CommandDef.cs" />
     <Compile Include="Controller\Glossary\Glossary Definitions\AdjectiveDef.cs" />
     <Compile Include="Controller\Glossary\Definition.cs" />
+    <Compile Include="Controller\Sentence\Sentence Nodes\ConjunctionNode.cs" />
     <Compile Include="Controller\Sentence\Token.cs" />
     <Compile Include="Controller\SyntFlag.cs" />
     <Compile Include="Controller\VerbSyntax.cs" />
     <Compile Include="Controller\Sentence\Sentence Nodes\AdjectiveNode.cs" />
     <Compile Include="Controller\Sentence\Sentence Nodes\CommandNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\ConjunctionNode.cs" />
     <Compile Include="Controller\Sentence\Sentence Nodes\DirectionNode.cs" />
     <Compile Include="Controller\Sentence\Node.cs" />
     <Compile Include="Controller\Sentence\Sentence Nodes\NounNode.cs" />
