--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -63,35 +63,35 @@
     <Compile Include="Adventure\ClassExtensions.cs" />
     <Compile Include="Adventure\Load\BuildGlossary.cs" />
     <Compile Include="Adventure\Game.cs" />
-    <Compile Include="Controller\DirFlag.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\ConjunctionDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\VerbDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\ParticleDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\NounDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\DirectionDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\CommandDef.cs" />
-    <Compile Include="Controller\Glossary\Glossary Definitions\AdjectiveDef.cs" />
-    <Compile Include="Controller\Glossary\Definition.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\ConjunctionNode.cs" />
-    <Compile Include="Controller\Sentence\Token.cs" />
-    <Compile Include="Controller\SyntFlag.cs" />
-    <Compile Include="Controller\VerbPhrase.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\AdjectiveNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\CommandNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\DirectionNode.cs" />
-    <Compile Include="Controller\Sentence\Node.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\NounNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\ParticleNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\NounGroupNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\UnknownNode.cs" />
-    <Compile Include="Controller\Sentence\Sentence Nodes\VerbNode.cs" />
-    <Compile Include="Model\CommandAction.cs" />
+    <Compile Include="Language\DirFlag.cs" />
+    <Compile Include="Language\Glossary\Definitions\ConjunctionDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\VerbDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\ParticleDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\NounDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\DirectionDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\CommandDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\AdjectiveDef.cs" />
+    <Compile Include="Language\Glossary\Definition.cs" />
+    <Compile Include="Language\Sentence\Nodes\ConjunctionNode.cs" />
+    <Compile Include="Language\Sentence\Token.cs" />
+    <Compile Include="Language\SyntFlag.cs" />
+    <Compile Include="Language\VerbPhrase.cs" />
+    <Compile Include="Language\Sentence\Nodes\AdjectiveNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\CommandNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\DirectionNode.cs" />
+    <Compile Include="Language\Sentence\Node.cs" />
+    <Compile Include="Language\Sentence\Nodes\NounNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\ParticleNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\NounGroupNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\UnknownNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\VerbNode.cs" />
+    <Compile Include="Controller\CommandAction.cs" />
     <Compile Include="Model\Entity.cs" />
-    <Compile Include="Controller\Glossary\Glossary.cs" />
-    <Compile Include="Model\VerbAction.cs" />
+    <Compile Include="Language\Glossary\Glossary.cs" />
+    <Compile Include="Controller\VerbAction.cs" />
     <Compile Include="View\ConsoleGUI.cs" />
-    <Compile Include="Controller\Sentence\Sentence.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Language\Sentence\Sentence.cs" />
+    <Compile Include="Adventure\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
