--- a/Advent-Game/Advent-Game.csproj
+++ b/Advent-Game/Advent-Game.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Language\DirFlag.cs" />
     <Compile Include="Language\Glossary\Definitions\ConjunctionDef.cs" />
     <Compile Include="Language\Glossary\Definitions\VerbDef.cs" />
-    <Compile Include="Language\Glossary\Definitions\ParticleDef.cs" />
+    <Compile Include="Language\Glossary\Definitions\PrepositionDef.cs" />
     <Compile Include="Language\Glossary\Definitions\NounDef.cs" />
     <Compile Include="Language\Glossary\Definitions\DirectionDef.cs" />
     <Compile Include="Language\Glossary\Definitions\CommandDef.cs" />
@@ -81,7 +81,7 @@
     <Compile Include="Language\Sentence\Nodes\DirectionNode.cs" />
     <Compile Include="Language\Sentence\Node.cs" />
     <Compile Include="Language\Sentence\Nodes\NounNode.cs" />
-    <Compile Include="Language\Sentence\Nodes\ParticleNode.cs" />
+    <Compile Include="Language\Sentence\Nodes\PrepositionNode.cs" />
     <Compile Include="Language\Sentence\Nodes\NounGroupNode.cs" />
     <Compile Include="Language\Sentence\Nodes\UnknownNode.cs" />
     <Compile Include="Language\Sentence\Nodes\VerbNode.cs" />
